--- a/src/app/tab-group-align-example.html
+++ b/src/app/tab-group-align-example.html
@@ -19,11 +19,12 @@
     </div>
 
     <ul>
-      <li class="active"><a href="#">Master</a>
+      <li class="active"><a href="#">Report</a>
         <ul>
-          <li><a href="#0">Transaction</a></li>
-          <li><a href="#0">Last Order</a></li>
-          <li><a href="#0">Current stock</a></li>
+          <li><a href="#0">Current Stock</a></li>
+          <li><a href="#0">Reorder Stock </a></li>
+          <li><a href="#0">Expired stock</a></li>
+          <li><a href="#0">Stock and SalesAmount</a></li>
         </ul>
       </li>
       <li><a href="#0">Details</a></li>
