--- a/src/app/tab-group-align-example.html
+++ b/src/app/tab-group-align-example.html
@@ -24,7 +24,7 @@
           <li><a href="#0">Current Stock</a></li>
           <li><a href="#0">Reorder Stock </a></li>
           <li><a href="#0">Expired stock</a></li>
-          <li><a href="#0">Stock and SalesAmount</a></li>
+          <li><a href="#0">Stock and Amount</a></li>
         </ul>
       </li>
       <li><a href="#0">Details</a></li>
